# vla-paper-digest

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_digest.yml
config/: labs.yaml
data/: classic_papers.json  history.json
scripts/: migrate_fill_pub_date.py  push_to_github.sh
src/: __init__.py  config.py  config_labs.py  emailer.py  main.py  models.py  scoring.py  selector.py  storage.py  summarizer.py  utils.py  wechat_notifier.py
src/sources/: __init__.py  arxiv_source.py  hf_papers_source.py  openreview.py  semantic_scholar.py
templates/: email_template.html
tests/: conftest.py  test_lab_boost.py  test_scoring.py  test_selector.py
